fixes overflow

--- a/example/index.less
+++ b/example/index.less
@@ -2,10 +2,6 @@ body{
 	font-family: "Helvetica Neue", "Lucida Grande", "Arial";
 }
 
-html, body {
-  overflow-y:hidden !important;
-} 
-
 h1,h2,h3{
 	font-weight: 100;
 	font-family: "Helvetica Neue", "Lucida Grande", "Arial";
