--- a/widget/css/common.less
+++ b/widget/css/common.less
@@ -503,32 +503,45 @@
 
 @media screen and (max-width: 480px) {
 
+
+
+
   .ie8-overlay{
     background: none !important;
   }
 
-  .overlay{
-    display: block !important;
-    overflow-y: auto !important;
-    position: static !important;
-  }
-  .centrix{
-    vertical-align: top !important;
-    display: block !important;
-    .panel{
-      box-shadow: none;
+  .popup{
 
-      .db-actions, .options{
-        margin-top: 20px;
-        font-size: 14px;
-      }
-
-      .footer{
-        margin-top: 40px;
-      }
-
+    .overlay{
+      display: block;
+      overflow: auto;
+      position: static;
     }
+
+    .centrix{
+      vertical-align: top;
+      display: block;
+      position: static;
+      .panel{
+        box-shadow: none;
+
+        .db-actions, .options{
+          margin-top: 20px;
+          font-size: 14px;
+        }
+
+        .footer{
+          margin-top: 40px;
+        }
+
+      }
+    }
+    // .centrix
+
+
   }
+
+
 }
 
 @media screen and (max-height: 470px) {
