--- a/widget/css/main.less
+++ b/widget/css/main.less
@@ -1,9 +1,7 @@
-.widget {
+.widget-container {
 	@import "normalize.less";
 	@import "reset.less";
-}
 
-#widget {
 	@import "fonts.less";
 	@import "animate.less";
 	@import "keyframes.less";
@@ -25,12 +23,8 @@
 
 	}
 
-	#widget{
-
+	.widget-container{
 		background: white;
-		z-index: 100000;
-		border-radius: 0;
-		overflow-y: scroll;
 		opacity: 1;
 	}
 }
